# mk-engine

./: CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt  Main.c
include/MK/: Core.h  Graphics.h
include/MK/Core/: Color.h  Constants.h  Debug.h  File.h  Input.h  Space.h
include/MK/Graphics/: Objects.h  Window.h
resources/Shaders/: default.vert
src/: CMakeLists.txt  Color.c  Constants.c  Core.c  Debug.c  File.c  Graphics.c  Input.c  Objects.c  Space.c  Window.c
